gcc/testsuite/gcc.dg/noncompile/pr23576.c
struct ipr_path_entry path[0]; /* { dg-error "array type has incomplete element type" } */
